# aqxion-scraper

./: .dockerignore  .env.example  .gitignore  AI_GUIDE.md  COMPETITION_WATCHER_README.md  Dockerfile  MARKET_RADAR_README.md  README.md  README_RAPIDO.md  ai_best_practices.md  ai_keywords.py  ai_service.py  alerts.py  cache_system.py  celery_app.py  celery_worker.py  check_cache_status.py  clean_empty_files.py  competition_watcher_run.py  config.py  config_v2.py  context_optimizer.py  crm_export.py  daily_close.py  dashboard_web.py  db.py  demo_competition_watcher.py  demo_market_radar.py  docker-compose.yml  export_daily.py  export_daily_enhanced.py  integrated_demo.py  kpi.py  main.py  main_async.py  main_async_backup.py  main_async_end.py  main_async_fixed.py  planning_system.py  pyproject.toml  (+23 more)
ai/: ai_keywords.py  ai_service.py
cache/: redis_cache.py  simple_cache.py
cleaners/: analyze_obsolete_code.py  auto_clean_code.py  clean_magic_numbers.py  clean_project.py  clean_unused_vars.py  smart_clean_code.py
competitive_radar/: __init__.py  cli.py  config.py
competitive_radar/dashboard/: __init__.py  signal_dashboard.py
competitive_radar/output/: __init__.py  csv_output.py  executive_output.py  json_output.py
competitive_radar/processors/: __init__.py  data_extractor.py
competitive_radar/sensors/: __init__.py  google_search.py
competitive_radar/signals/: __init__.py  business_signals.py
competitive_radar/storage/: __init__.py  market_data.py
config/: config_v2.py  rules.py  sources.py
core/: eugene_schwartz_system.py  main_async.py
database/: db.py  trend.sql
demos/: integrated_demo.py  marketing_insights_demo.py  task_demo.py
docs/: EFFICIENT_SCRAPING_README.md  OPTIMIZATION_RESULTS.md
instructions/: python.instructions.md
scraping/: competition_watcher.py  efficient_scraper.py  marketing_pain_points_scraper.py  simple_scrapling.py
tests/: integration_tests.py
utils/: circuit_breaker.py  context_optimizer.py  kpi.py  planning_system.py  simple_alerts.py  task_manager.py
web/: dashboard_web.py
